--- a/index.html
+++ b/index.html
@@ -6,11 +6,100 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Template 3</title>
 </head>
 
 <body>
+
+    <!-- about section -->
+    <section class="container p-5">
+        <div class="row">
+            <h2 class="col-lg-12 p-2 text-center text-black">About me</h2>
+        </div>
+        <div class="row">
+            <p class="col-lg-12 p-4 fs-4">
+                I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.
+            </p>
+        </div>
+        <div class="row">
+            <div class="col-lg-5"></div>
+            <button class="btn bg-success col-lg-2 p-2 text-white">Get My Resome</button>
+            <div class="col-lg-5"></div>
+        </div>
+    </section>
+    <!-- Language and skills section -->
+    <section class="container p-5">
+        <div class="row text-center ">
+            <div class="col-md-4 rounded-4 bg-light">
+                <img src="img/Icons.png" alt="">
+                <h3> Language</h3>
+                <button class="btn btn-success text-white">Javascript</button>
+                <button class="btn btn-success text-white">Rube</button>
+                <button class="btn btn-success text-white">Html</button>
+                <button class="btn btn-success text-white">Css</button>
+            </div>
+            <div class="col-md-4 bg-light rounded-4 ">
+                <img src="img/Icons3.png" alt="">
+                <h3> Frameworks</h3>
+                <button class="btn btn-success text-white">React.js</button>
+                <button class="btn btn-success text-white">Ruby on Rails</button>
+                <button class="btn btn-success text-white">RSpec</button>
+                <button class="btn btn-success mt-1 text-white">Capybara</button>
+            </div>
+            <div class="col-md-4 rounded-4 bg-light pb-4">
+                <img src="img/Icons (1).png" alt="">
+                <h3> Skills</h3>
+                <button class="btn btn-success  text-white">Database Management</button>
+                <button class="btn btn-success text-white">Version Control</button>
+                <button class="btn btn-success mt-1 text-whitev ">CLI</button>
+                <button class="btn btn-success mt-1 text-white">Web Development</button>
+                <button class="btn btn-success mt-1 text-white">API Design</button>
+            </div>
+        </div>
+    </section>
+    <!-- Contact section -->
+    <section class="container  p-5 ">
+        <div class="row">
+            <div class="col-lg-4 text-center text-wrap fs-4 fw-bold mx-1">
+                <p class="">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+            </div>
+            <div class="col-lg-7  p-0">
+                <form action="" class="m-1 form-group">
+
+                    <div class="row">
+                        <div class="col">
+                            <input type="text" class="form-control m-1" placeholder="First Name">
+                        </div>
+
+                        <div class="col">
+                            <input type="text" class="form-control m-1" placeholder="Last Name">
+                        </div>
+                    </div>
+                    <input type="email" placeholder="Email Address" class="form-control m-1">
+                    <textarea placeholder="Hey I’d like to connect to..." cols="3" rows="3" class="form-control"></textarea>
+                    <input type="submit" class="btn btn-success btn-md my-3" value="Get In Touch">
+
+                </form>
+            </div>
+        </div>
+    </section>
+    <br><br><br>
+    <hr>
+    <!-- Footer Section -->
+    <footer class="container p-0">
+        <div class="row">
+            <div class="col-lg-12 d-flex justify-content-center">
+                <a href="https://twitter.com/home" class="p-1 link-secondary"><i class="fa fa-twitter"></i></a>
+                <a href="https://linkedin.com/home" class="p-1 link-secondary"><i class="fa fa-linkedin"></i></a>
+                <a href="https://google.com/home" class="p-1 link-secondary"><i class="fa fa-medium"></i></a>
+                <a href="https://instagram.com/home" class="p-1 link-secondary"><i class="fa fa-github"></i></a>
+                <a href="https://facebook.com/home" class="p-1 link-secondary"><i class="fa fa-angellist"></i></a>
+            </div>
+        </div>
+        </div>
+    </footer>
 </body>
 
 </html>
